--- a/sass/comic.scss
+++ b/sass/comic.scss
@@ -22,7 +22,7 @@
     }
 
     .panel {
-        background-color: #860000;
+        background: linear-gradient(to top, #500c0c, #860000);
         border: solid 5px #ffffff;
         // min-height: 300px;
         margin: 0 1.5em 1.5em 0;
