--- a/sass/banner.scss
+++ b/sass/banner.scss
@@ -3,9 +3,57 @@
     @media screen and (max-width: 768px) {
         min-height: 75vh;
     }
+    #container {
+        overflow: hidden;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        left: 50%;
+        top: 60%;
+        width: 70vw;
+        // width: 100%;
+        // background: linear-gradient(to top, transparent, white, transparent);
+        height: 70vh;
+        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+        filter: sepia(30%);
+        border: solid 5px $colorred;
+        @media screen and (max-width: 766px) {
+            width: 100%;
+            height: 30vh;
+        }
+    }
+    #container:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        box-shadow: inset 0px 0px 150px 20px black;
+        // box-shadow: none;
+        mix-blend-mode: multiply;
+        @media screen and (max-width: 768px) {
+            box-shadow: inset 0px 0px 40px 20px black;
+        }
+    }
+    #pic {
+        opacity: 1;
+    }
+    .pic {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    .line {
+        position: absolute;
+        height: 100%;
+        width: 1px;
+        opacity: 0.1;
+        background-color: #000;
+    }
     .title {
         position: absolute;
         left: 50%;
+        z-index: 10;
         top: 20%;
         transform: translate(-50%, -50%);
         width: 100%;
