--- a/sass/banner.scss
+++ b/sass/banner.scss
@@ -11,13 +11,24 @@
         top: 60%;
         width: 70vw;
         // width: 100%;
-        // background: linear-gradient(to top, transparent, white, transparent);
         height: 70vh;
-        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+        // box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
         filter: sepia(30%);
-        border: solid 5px $colorred;
-        @media screen and (max-width: 766px) {
+        // border: solid 5px $colorred;
+        &::before {
+            content: "";
+            position: absolute;
+            transform: translate(-50%, -50%);
+            left: 50%;
+            top: 60%;
             width: 100%;
+            // width: 100%;
+            height: 70%;
+            border: 8px solid $colorred;
+            box-shadow: inset 0px 0px 150px 20px black;
+        }
+        @media screen and (max-width: 766px) {
+            width: 90%;
             height: 30vh;
         }
     }
@@ -26,11 +37,11 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        box-shadow: inset 0px 0px 150px 20px black;
+        // box-shadow: inset 0px 0px 150px 20px black;
         // box-shadow: none;
         mix-blend-mode: multiply;
         @media screen and (max-width: 768px) {
-            box-shadow: inset 0px 0px 40px 20px black;
+            // box-shadow: inset 0px 0px 40px 20px black;
         }
     }
     #pic {
