--- a/sass/comic.scss
+++ b/sass/comic.scss
@@ -129,7 +129,7 @@
     }
 
     h2.b {
-        font-family: "classic-comic", sans-serif;
+        font-family: "Zain", sans-serif !important;
         margin-left: 0.8em;
     }
 
@@ -137,12 +137,12 @@
         padding: 0 0.25em;
         font-size: 3em;
         letter-spacing: 0.01em;
-        font-family: "blambot-fx-pro", sans-serif;
+        font-family: "Source Code Pro", sans-serif !important;
         margin-left: 0.5em;
     }
 
     .button {
-        font-family: "blambot-fx-pro", sans-serif;
+        font-family: "Source Code Pro", sans-serif !important;
         text-decoration: none;
         display: inline-block;
         font-size: 3em;
