--- a/sass/banner.scss
+++ b/sass/banner.scss
@@ -25,6 +25,7 @@
             // width: 100%;
             height: 70%;
             border: 8px solid $colorred;
+            border-radius: 24px;
             box-shadow: inset 0px 0px 150px 20px black;
         }
         @media screen and (max-width: 766px) {
