--- a/sass/banner.scss
+++ b/sass/banner.scss
@@ -3,6 +3,57 @@
     @media screen and (max-width: 768px) {
         min-height: 75vh;
     }
+
+    .container_mouse {
+        text-align: center;
+        color: #eaeaea;
+        position: absolute;
+        z-index: 12;
+        font-weight: bold;
+        padding-top: 2rem;
+        cursor: pointer;
+        left: 50%;
+        top: 90%;
+        transform: translate(-50%, -50%);
+        cursor: pointer;
+        display: none;
+        @media screen and (max-width: 768px) {
+            padding-top: 0;
+            display: block;
+            // top: -40px;
+        }
+    }
+
+    .container_mouse .mouse-btn {
+        margin: 10px auto;
+        width: 30px;
+        height: 60px;
+        border: 4px solid #eaeaea;
+        border-radius: 30px;
+        display: flex;
+    }
+
+    .container_mouse .mouse-btn .mouse-scroll {
+        display: block;
+        width: 16px;
+        height: 16px;
+        background: linear-gradient(170deg, rgba(#eaeaea, 1), rgba(black, 0.1));
+        border-radius: 50%;
+        margin: auto;
+        animation: scrolling 1s linear infinite;
+    }
+
+    @keyframes scrolling {
+        0% {
+            opacity: 0;
+            transform: translateY(-20px);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateY(20px);
+        }
+    }
     #container {
         overflow: hidden;
         position: absolute;
