--- a/sass/init.scss
+++ b/sass/init.scss
@@ -196,7 +196,12 @@ section {
     // font-size: 1.2rem;
     // line-height: 1.6rem;
 }
-
+.line-line {
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to right, transparent, white, transparent);
+    margin: 52px 0;
+}
 .totop {
     position: relative;
     z-index: 19;
@@ -218,7 +223,7 @@ section {
 
 main {
     overflow-x: clip;
-    background: #fafafa;
+    background: #300606;
 }
 html,
 body {
