--- a/sass/comic.scss
+++ b/sass/comic.scss
@@ -16,6 +16,7 @@
     }
     .row {
         display: block;
+        margin: 0 auto;
         flex-flow: row wrap;
         justify-content: space-between;
         margin: 0;
@@ -28,6 +29,7 @@
         margin: 0 1.5em 1.5em 0;
         flex-grow: 1;
         display: inline-block;
+        // position: relative;
         flex-flow: row nowrap;
         justify-content: flex-start;
     }
@@ -39,6 +41,15 @@
     .panel-text {
         padding: 1.5em;
         flex-grow: 1;
+        .image {
+            width: 100%;
+            height: 150px;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
         p {
             font-family: "Source Code Pro", sans-serif;
         }
@@ -49,8 +60,9 @@
     }
 
     .half {
-        width: 48%;
+        width: 46%;
         margin-right: 1em;
+        // margin: 0 auto;
         vertical-align: top;
         display: inline-block;
         @media screen and (max-width: 768px) {
@@ -186,6 +198,57 @@
 
     h2 + .row > .panel:first-of-type {
         padding-top: 2em;
+    }
+    @keyframes ekg {
+        0% {
+            opacity: 0;
+        }
+        25% {
+            opacity: 1;
+        }
+        50% {
+            stroke-dashoffset: 2000;
+        }
+        99% {
+            opacity: 0;
+            stroke-dashoffset: 3000;
+        }
+        100% {
+            stroke-dashoffset: 1000;
+        }
+    }
+    .ekg {
+        fill: none;
+        stroke: #fff;
+        stroke-width: 3;
+        stroke-linecap: round;
+        stroke-linejoin: miter;
+        opacity: 0;
+        stroke-dashoffset: 1000;
+        stroke-dasharray: 1000;
+        animation: ekg 4.5s linear forwards infinite;
+    }
+
+    .detakx {
+        position: absolute;
+        left: 0;
+        right: 0;
+        z-index: 10;
+        top: 10%;
+        // z-index: 20;
+        width: 100%;
+        height: auto;
+        @media screen and (max-width: 768px) {
+            top: 25%;
+        }
+        svg {
+            width: 100%;
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
     }
 }
 
