--- a/sass/comic.scss
+++ b/sass/comic.scss
@@ -266,3 +266,14 @@
         }
     }
 }
+
+.penjara {
+    width: 50%;
+    height: auto;
+    margin: 0 auto;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+}
