--- a/sass/comic.scss
+++ b/sass/comic.scss
@@ -1,6 +1,37 @@
 .comic-wrapper {
     padding: 1em 1em 0em;
     background: #300606;
+
+    .redlight {
+        background-color: red;
+        background: radial-gradient(rgba(255, 0, 0, 0.5) 0%, transparent 67%, transparent 100%);
+        animation: redlight 1s infinite;
+        right: 0;
+        top: 0%;
+    }
+
+    @keyframes redlight{
+        0%{opacity: 1;}
+        60%{opacity: 1;}
+        65%{opacity: 0;}
+        70%{opacity: 1;}
+        75%{opacity: 0;}
+        80%{opacity: 1;}
+        90%{opacity: 0;}
+        100%{opacity: 1;}
+    }
+    .redlight, .bluelight {
+        width: 70%;
+        height: 50px;
+        z-index: 2;
+        border-radius: 8px;
+        display: table-cell;
+        vertical-align: middle;
+        position: absolute;
+
+        /* top: -25% !important; */
+    }
+
     .helpbg {
         position: absolute;
         top: -16px;
@@ -8,12 +39,14 @@
         right: 0;
         width: 100%;
         height: auto;
+
         img {
             width: 100%;
             height: 100%;
             object-fit: contain;
         }
     }
+
     .row {
         display: block;
         margin: 0 auto;
@@ -25,10 +58,12 @@
     .panel {
         background: linear-gradient(to top, #500c0c, #860000);
         border: solid 5px #ffffff;
+
         // min-height: 300px;
         margin: 0 1.5em 1.5em 0;
         flex-grow: 1;
         display: inline-block;
+
         // position: relative;
         flex-flow: row nowrap;
         justify-content: flex-start;
@@ -41,15 +76,19 @@
     .panel-text {
         padding: 1.5em;
         flex-grow: 1;
+        position: relative;
+
         .image {
             width: 100%;
             height: 150px;
+
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: contain;
             }
         }
+
         p {
             font-family: "Source Code Pro", sans-serif;
         }
@@ -62,14 +101,17 @@
     .half {
         width: 46%;
         margin-right: 1em;
+
         // margin: 0 auto;
         vertical-align: top;
         display: inline-block;
+
         @media screen and (max-width: 768px) {
             margin-right: 0;
             width: 100%;
         }
     }
+
     // @media only screen and (min-width: 60em) {
     //     .half {
     //         flex-grow: 1;
@@ -82,6 +124,7 @@
         width: 100%;
         margin-right: 0;
     }
+
     @media only screen and (min-width: 60em) {
         .onethird {
             flex-grow: 1;
@@ -94,6 +137,7 @@
         width: 100%;
         margin-right: 0;
     }
+
     @media only screen and (min-width: 60em) {
         .twothirds {
             flex-grow: 2;
@@ -133,11 +177,7 @@
         color: #118b8d;
         top: -0.45em;
         left: 0.125em;
-        text-shadow:
-            5px 5px 0 #454546,
-            5px 5px 0 #454546,
-            5px 5px 0 #454546,
-            5px 5px 0 #454546;
+        text-shadow: 5px 5px 0 #454546, 5px 5px 0 #454546, 5px 5px 0 #454546, 5px 5px 0 #454546;
     }
 
     h2.b {
@@ -199,24 +239,30 @@
     h2 + .row > .panel:first-of-type {
         padding-top: 2em;
     }
+
     @keyframes ekg {
         0% {
             opacity: 0;
         }
+
         25% {
             opacity: 1;
         }
+
         50% {
             stroke-dashoffset: 2000;
         }
+
         99% {
             opacity: 0;
             stroke-dashoffset: 3000;
         }
+
         100% {
             stroke-dashoffset: 1000;
         }
     }
+
     .ekg {
         fill: none;
         stroke: #fff;
@@ -235,15 +281,19 @@
         right: 0;
         z-index: 10;
         top: 10%;
+
         // z-index: 20;
         width: 100%;
         height: auto;
+
         @media screen and (max-width: 768px) {
             top: 25%;
         }
+
         svg {
             width: 100%;
         }
+
         img {
             width: 100%;
             height: 100%;
@@ -257,10 +307,12 @@
     background: #300606;
     min-height: auto;
     text-align: center;
+
     .alls {
         margin-bottom: 8px;
         font-family: "Source Code Pro";
         color: white;
+
         .jobs {
             color: #ccc;
         }
@@ -271,6 +323,7 @@
     width: 50%;
     height: auto;
     margin: 0 auto;
+
     img {
         width: 100%;
         height: 100%;
