--- a/sass/comic.scss
+++ b/sass/comic.scss
@@ -2,6 +2,19 @@
     padding: 1em 1em 0em;
     background: #300606;
 
+    .polisi-tangkap {
+        width: 120px;
+        float: left;
+        margin: 0 16px;
+        // margin: 0 auto;
+        height: auto;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+
     .redlight {
         background-color: red;
         background: radial-gradient(rgba(255, 0, 0, 0.5) 0%, transparent 67%, transparent 100%);
@@ -10,17 +23,34 @@
         top: 0%;
     }
 
-    @keyframes redlight{
-        0%{opacity: 1;}
-        60%{opacity: 1;}
-        65%{opacity: 0;}
-        70%{opacity: 1;}
-        75%{opacity: 0;}
-        80%{opacity: 1;}
-        90%{opacity: 0;}
-        100%{opacity: 1;}
+    @keyframes redlight {
+        0% {
+            opacity: 1;
+        }
+        60% {
+            opacity: 1;
+        }
+        65% {
+            opacity: 0;
+        }
+        70% {
+            opacity: 1;
+        }
+        75% {
+            opacity: 0;
+        }
+        80% {
+            opacity: 1;
+        }
+        90% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
     }
-    .redlight, .bluelight {
+    .redlight,
+    .bluelight {
         width: 70%;
         height: 50px;
         z-index: 2;
@@ -177,7 +207,11 @@
         color: #118b8d;
         top: -0.45em;
         left: 0.125em;
-        text-shadow: 5px 5px 0 #454546, 5px 5px 0 #454546, 5px 5px 0 #454546, 5px 5px 0 #454546;
+        text-shadow:
+            5px 5px 0 #454546,
+            5px 5px 0 #454546,
+            5px 5px 0 #454546,
+            5px 5px 0 #454546;
     }
 
     h2.b {
