--- a/sass/comic.scss
+++ b/sass/comic.scss
@@ -8,6 +8,9 @@
         margin: 0 16px;
         // margin: 0 auto;
         height: auto;
+        @media screen and (max-width: 768px) {
+            width: 80px;
+        }
         img {
             width: 100%;
             height: 100%;
