--- a/sass/comic.scss
+++ b/sass/comic.scss
@@ -9,6 +9,9 @@
         z-index: 10;
         height: auto;
         float: right;
+        @media screen and (max-width: 768px) {
+            width: 120px;
+        }
 
         img {
             width: 100%;
