--- a/sass/init.scss
+++ b/sass/init.scss
@@ -342,14 +342,14 @@ section {
     // background: rgb(105 84 29 / 80%) !important;
     // background: rgb(80, 80, 80, 0.8) !important;
     // backdrop-filter: blur(11px);
-    background: linear-gradient(45deg, #333, $colorred) !important;
+    background: linear-gradient(45deg, #460404, $colorred) !important;
     @media screen and (max-width: 766px) {
         // backdrop-filter: initial;
         // background: rgb(80, 80, 80, 0.8) !important;
     }
 }
 .bg-blues {
-    background: $colorred !important;
+    background: #300606 !important;
     position: relative;
     z-index: 12;
 }
